WWW: Force word wrapping of the content to avoid horizontal scrolling.
This isn't perfect but avoids overlap of the menu and the content.

llvm-svn: 162903

--- a/clang/www/menu.css
+++ b/clang/www/menu.css
@@ -8,9 +8,9 @@
 }
 [id=content] {
 	/* *****  EDIT THIS VALUE IF CONTENT OVERLAPS MENU ***** */
-	position:absolute;
-  left:29ex;
+	margin-left:29ex;
 	padding-right:4ex;
+	word-wrap: break-word;
 }
 
 /**************/
